# translation_helps_mcp_proxy

./: .gitignore  CORRECT_mcp_config.json  LICENSE  README.md  debug_fetch_scripture.py  debug_mcpo_endpoints.py  mcp_config_example.json  mcp_proxy_server.py  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.sh  test_init_failure.py  test_john_3_16.py  test_mcp_protocol.py  test_mcp_proxy.py  test_openai_integration.py  test_proxy.py  test_stdio_improved.py  test_stdio_john_3_16.py
mcp-bridge_usage_example/: Readme.md  config.json  launch.sh
src/translation_helps_mcp_proxy/: __init__.py  __main__.py  mcp_proxy_server.py
tests/: __init__.py  conftest.py  test_fetch_translation_notes.py  test_get_translation_word.py  test_mcp_protocol.py  test_mcpo_integration.py  test_note_filtering.py  test_parameter_hiding.py  test_stdio_workflow.py  test_strict_translation_notes.py  test_tool_execution.py  test_tool_filtering.py  test_upstream_connectivity.py
