[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translation-helps-mcp-proxy"
version = "1.0.0"
description = "MCP proxy server for translation-helps-mcp with MCPO REST API integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Translation Helps MCP Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "typing-extensions>=4.0.0",
    "mcpo>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/JEdward7777/translation-helps-mcp"
Repository = "https://github.com/JEdward7777/translation-helps-mcp"
Issues = "https://github.com/JEdward7777/translation-helps-mcp/issues"

[project.scripts]
translation-helps-mcp-proxy = "translation_helps_mcp_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
translation_helps_mcp_proxy = ["*.json", "*.txt"]